# some-axum-code

./: Cargo.toml  docker-compose.yml
migrations/: 20231104192153_notes.sql
src/: lib.rs  main.rs  router.rs
