[package]
name = "some-axum-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dotenvy = "0.15.7"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
  "trace",
  "request-id",
  "compression-br",
  "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ulid = "1.1.0"
